kubernetes/cnv-react-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cnv-client
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: cnv-client
