kubernetes/cnv-react-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cnv-client
  annotations:
    nginx.org/websocket-services: cnv-client
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: letsencrypt-development
    kubernetes.io/ingress.class: "nginx"
    cloud.google.com/neg: '{"ingress": false}'

spec:
  tls: 
    - secretName: secret
      hosts:
        - host
  rules:
    - host: host
      http:
        paths:
        - path: /app(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: cnv-client
              port: 
                number: 80
